--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "isbot": "^5.1.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router": "7.6.0",
     "react-router-dom": "7.6.0",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
