--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@shopify/hydrogen": "2025.5.0",
     "@shopify/remix-oxygen": "^3.0.0",
+    "clsx": "^2.1.1",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^5.1.22",
@@ -25,6 +26,7 @@
     "react-router": "7.6.0",
     "react-router-dom": "7.6.0",
     "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
